# kemopin

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/kemopin/: config.py  images.py  main.py  storage.py
static/: 404.html  admin.html  app.js  index.html  style.css
static/js/: boardsize.js  canvas.js  constants.js  elements.js  form.js  history.js  main.js  save.js  serialize.js  shortcuts.js  state.js  upload.js  utils.js
